src/test/ui/generic-associated-types/parse/trait-path-missing-gen_arg.stderr
error: expected one of `>`, a const expression, lifetime, or type, found `:`
  --> $DIR/trait-path-missing-gen_arg.rs:6:30
   |
LL |   fn f1<'a>(arg : Box<dyn X< : 32 >>) {}
   |                              ^ expected one of `>`, a const expression, lifetime, or type
   |
help: expressions must be enclosed in braces to be used as const generic arguments
   |
LL |   fn f1<'a>(arg : Box<{ dyn X< : 32 } >>) {}
   |                       +             +

error: expected parameter name, found `>`
  --> $DIR/trait-path-missing-gen_arg.rs:6:36
   |
LL |   fn f1<'a>(arg : Box<dyn X< : 32 >>) {}
   |                                    ^ expected parameter name

error: expected one of `!`, `)`, `+`, `,`, or `::`, found `>`
  --> $DIR/trait-path-missing-gen_arg.rs:6:36
   |
LL |   fn f1<'a>(arg : Box<dyn X< : 32 >>) {}
   |                                    ^
   |                                    |
   |                                    expected one of `!`, `)`, `+`, `,`, or `::`
   |                                    help: missing `,`

error: expected one of `>`, a const expression, lifetime, or type, found `=`
  --> $DIR/trait-path-missing-gen_arg.rs:14:30
   |
LL |   fn f1<'a>(arg : Box<dyn X< = 32 >>) {}
   |                            - ^ expected one of `>`, a const expression, lifetime, or type
   |                            |
   |                            maybe try to close unmatched angle bracket

error[E0747]: constant provided when a type was expected
  --> $DIR/trait-path-missing-gen_arg.rs:6:23
   |
LL |   fn f1<'a>(arg : Box<dyn X< : 32 >>) {}
   |                       ^^^^^^^^^^^

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0747`.
